Add security enhancements for Django admin panel
- Introduced ADMIN_URL variable in .env.example and updated deployment checklist.
- Implemented dynamic admin URL in urls.py to enhance security.
- Created generate_admin_url.py script for generating a random admin URL.
- Added logging configuration in settings_prod.py and created logs directory.
- Documented security measures in SECURITY.md and SECURITY_CHECKLIST.md.

--- a/.env.example
+++ b/.env.example
@@ -6,6 +6,10 @@ SECRET_KEY=your-super-secret-key-here-minimum-50-characters-random-string
 DEBUG=False
 ALLOWED_HOSTS=yourdomain.com,www.yourdomain.com,your-server-ip
 
+# Admin panel URL (change to something secret!)
+# Example: secret-control-panel-xyz123/
+ADMIN_URL=secret-admin-panel-xyz/
+
 # Database settings
 DB_NAME=bjfy_db
 DB_USER=bjfy_user
