Refactor deployment and security documentation; enhance player functionality and access control
- Updated deployment checklist to include permission settings and static file collection.
- Revised README_DEPLOY to clarify environment variable configurations and added troubleshooting tips.
- Removed outdated SECURITY.md and SECURITY_CHECKLIST.md files; consolidated security measures into existing documentation.
- Deleted TROUBLESHOOTING.md and UPDATE_GUIDE.md as they were no longer necessary.
- Improved player functionality by fixing fullscreen play button and restricting like/add-to-playlist actions to authenticated users.
- Cleaned up JavaScript event handling for better reliability and maintainability.
- Added PLAYER_FIXES.md to document player-related changes and testing procedures.
- Removed deploy.sh script as deployment is now handled through other means.

--- a/.env.example
+++ b/.env.example
@@ -4,7 +4,8 @@
 # Django settings
 SECRET_KEY=your-super-secret-key-here-minimum-50-characters-random-string
 DEBUG=False
-ALLOWED_HOSTS=yourdomain.com,www.yourdomain.com,your-server-ip
+# ВАЖНО: Без пробелов! Включи 127.0.0.1, localhost, IP-сервера и домены
+ALLOWED_HOSTS=127.0.0.1,localhost,your-server-ip,yourdomain.com,www.yourdomain.com
 
 # Admin panel URL (change to something secret!)
 # Example: secret-control-panel-xyz123/
@@ -12,7 +13,8 @@ ADMIN_URL=secret-admin-panel-xyz/
 
 # Database settings
 DB_NAME=bjfy_db
-DB_USER=bjfy_user
+DB_USER=
+
 DB_PASSWORD=your-secure-database-password
 DB_HOST=localhost
 DB_PORT=5432
